// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={null}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox checked"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      className="archived"
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox "
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      className=""
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star "
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox "
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      className=""
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star pinned"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Archived Task 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={true}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox checked"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className="archived"
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 0 (archived)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Task 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star pinned"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
    <div
      className="list-item"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox "
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          className=""
          placeholder="Input title"
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          onClick={[Function]}
        >
          <span
            className="icon-star "
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots dilidili/Layout Large 1`] = `
<div
  className="layout"
>
  <div
    className="header"
  >
    <div
      id="main-header"
    >
      <div
        className="main-header-nav"
      >
        <div
          className="bg"
        />
        <div
          className="header-container"
        >
          <ul
            className="main-header-nav-body"
          >
            <li
              className="nav-li floatleft now"
            >
              <a
                href="/"
              >
                首页
              </a>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/1"
              >
                动画
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/24"
                >
                  MAD·AMV
                </a>
                <a
                  href="/sort/25"
                >
                  MMD·3D
                </a>
                <a
                  href="/sort/47"
                >
                  短片·手书·配音
                </a>
                <a
                  href="/sort/27"
                >
                  综合
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/bangumiindex"
              >
                番剧
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/33"
                >
                  连载动画
                </a>
                <a
                  href="/sort/32"
                >
                  完结动画
                </a>
                <a
                  href="/sort/152"
                >
                  官方延伸
                </a>
                <a
                  href="/sort/153"
                >
                  国产动画
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/3"
              >
                音乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/31"
                >
                  翻唱
                </a>
                <a
                  href="/sort/30"
                >
                  VOCALOID·UTAU
                </a>
                <a
                  href="/sort/29"
                >
                  三次元音乐
                </a>
                <a
                  href="/sort/28"
                >
                  同人音乐
                </a>
                <a
                  href="/sort/54"
                >
                  OP/ED/OST
                </a>
                <a
                  href="/sort/130"
                >
                  音乐选集
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/129"
              >
                舞蹈
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/20"
                >
                  宅舞
                </a>
                <a
                  href="/sort/154"
                >
                  三次元舞蹈
                </a>
                <a
                  href="/sort/156"
                >
                  舞蹈教程
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/4"
              >
                游戏
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/17"
                >
                  单机联机
                </a>
                <a
                  href="/sort/65"
                >
                  网游·电竞
                </a>
                <a
                  href="/sort/136"
                >
                  音游
                </a>
                <a
                  href="/sort/19"
                >
                  Mugen
                </a>
                <a
                  href="/sort/121"
                >
                  GMV
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/36"
              >
                科技
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/37"
                >
                  纪录片
                </a>
                <a
                  href="/sort/124"
                >
                  趣味科普人文
                </a>
                <a
                  href="/sort/122"
                >
                  野生技术协会
                </a>
                <a
                  href="/sort/39"
                >
                  演讲·公开课
                </a>
                <a
                  href="/sort/95"
                >
                  数码
                </a>
                <a
                  href="/sort/98"
                >
                  机械
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/5"
              >
                娱乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/153"
                >
                  搞笑
                </a>
                <a
                  href="/sort/138"
                >
                  生活
                </a>
                <a
                  href="/sort/75"
                >
                  动物圈
                </a>
                <a
                  href="/sort/76"
                >
                  美食圈
                </a>
                <a
                  href="/sort/71"
                >
                  综艺
                </a>
                <a
                  href="/sort/137"
                >
                  娱乐圈
                </a>
                <a
                  href="/sort/131"
                >
                  Korea相关
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/119"
              >
                鬼畜
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/22"
                >
                  鬼畜调教
                </a>
                <a
                  href="/sort/26"
                >
                  音MAD
                </a>
                <a
                  href="/sort/126"
                >
                  人力VOCALOID
                </a>
                <a
                  href="/sort/127"
                >
                  教程演示
                </a>
              </div>
            </li>
            <div
              className="header-search floatright"
            >
              <form
                id="search_form"
                onSubmit={[Function]}
              >
                <input
                  id="search_content"
                  name="keyword"
                  onChange={[Function]}
                  placeholder="这里搜索"
                  value=""
                />
                <input
                  className="btn-search"
                  title="搜索"
                  type="submit"
                  value="搜 索"
                />
              </form>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content"
  >
    <div
      style={
        Object {
          "background": "black",
          "height": "1000px",
        }
      }
    >
      children
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      id="footer"
    >
      <div
        className="area-inner"
      >
        <div
          className="about-block floatleft"
        >
          <div
            className="about-item left floatleft"
          >
            <div
              className="about-title"
            >
              About
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="http://www.bilibili.com"
              >
                BiliBili弹幕视频网
              </a>
              <a
                href="https://github.com/vitaminac/dilidili"
              >
                项目地址
              </a>
            </div>
          </div>
          <div
            className="about-item floatleft"
          >
            <div
              className="about-title"
            >
              Contact
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="https://vitaminac.github.io/"
              >
                Blog
              </a>
              <a
                href="https://github.com/vitaminac"
              >
                Github
              </a>
            </div>
          </div>
          <div
            className="about-item right floatleft"
          >
            <div
              className="about-title"
            >
              Copyright
            </div>
            <div
              className="aboutLinks"
            >
              <span>
                © 1997-2021
              </span>
            </div>
          </div>
        </div>
        <div
          className="clear"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots dilidili/Layout Normal 1`] = `
<div
  className="layout"
>
  <div
    className="header"
  >
    <div
      id="main-header"
    >
      <div
        className="main-header-nav"
      >
        <div
          className="bg"
        />
        <div
          className="header-container"
        >
          <ul
            className="main-header-nav-body"
          >
            <li
              className="nav-li floatleft now"
            >
              <a
                href="/"
              >
                首页
              </a>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/1"
              >
                动画
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/24"
                >
                  MAD·AMV
                </a>
                <a
                  href="/sort/25"
                >
                  MMD·3D
                </a>
                <a
                  href="/sort/47"
                >
                  短片·手书·配音
                </a>
                <a
                  href="/sort/27"
                >
                  综合
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/bangumiindex"
              >
                番剧
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/33"
                >
                  连载动画
                </a>
                <a
                  href="/sort/32"
                >
                  完结动画
                </a>
                <a
                  href="/sort/152"
                >
                  官方延伸
                </a>
                <a
                  href="/sort/153"
                >
                  国产动画
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/3"
              >
                音乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/31"
                >
                  翻唱
                </a>
                <a
                  href="/sort/30"
                >
                  VOCALOID·UTAU
                </a>
                <a
                  href="/sort/29"
                >
                  三次元音乐
                </a>
                <a
                  href="/sort/28"
                >
                  同人音乐
                </a>
                <a
                  href="/sort/54"
                >
                  OP/ED/OST
                </a>
                <a
                  href="/sort/130"
                >
                  音乐选集
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/129"
              >
                舞蹈
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/20"
                >
                  宅舞
                </a>
                <a
                  href="/sort/154"
                >
                  三次元舞蹈
                </a>
                <a
                  href="/sort/156"
                >
                  舞蹈教程
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/4"
              >
                游戏
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/17"
                >
                  单机联机
                </a>
                <a
                  href="/sort/65"
                >
                  网游·电竞
                </a>
                <a
                  href="/sort/136"
                >
                  音游
                </a>
                <a
                  href="/sort/19"
                >
                  Mugen
                </a>
                <a
                  href="/sort/121"
                >
                  GMV
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/36"
              >
                科技
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/37"
                >
                  纪录片
                </a>
                <a
                  href="/sort/124"
                >
                  趣味科普人文
                </a>
                <a
                  href="/sort/122"
                >
                  野生技术协会
                </a>
                <a
                  href="/sort/39"
                >
                  演讲·公开课
                </a>
                <a
                  href="/sort/95"
                >
                  数码
                </a>
                <a
                  href="/sort/98"
                >
                  机械
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/5"
              >
                娱乐
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/153"
                >
                  搞笑
                </a>
                <a
                  href="/sort/138"
                >
                  生活
                </a>
                <a
                  href="/sort/75"
                >
                  动物圈
                </a>
                <a
                  href="/sort/76"
                >
                  美食圈
                </a>
                <a
                  href="/sort/71"
                >
                  综艺
                </a>
                <a
                  href="/sort/137"
                >
                  娱乐圈
                </a>
                <a
                  href="/sort/131"
                >
                  Korea相关
                </a>
              </div>
            </li>
            <li
              className="nav-li floatleft"
            >
              <a
                href="/sort/119"
              >
                鬼畜
              </a>
              <div
                className="nav-li-list"
              >
                <a
                  href="/sort/22"
                >
                  鬼畜调教
                </a>
                <a
                  href="/sort/26"
                >
                  音MAD
                </a>
                <a
                  href="/sort/126"
                >
                  人力VOCALOID
                </a>
                <a
                  href="/sort/127"
                >
                  教程演示
                </a>
              </div>
            </li>
            <div
              className="header-search floatright"
            >
              <form
                id="search_form"
                onSubmit={[Function]}
              >
                <input
                  id="search_content"
                  name="keyword"
                  onChange={[Function]}
                  placeholder="这里搜索"
                  value=""
                />
                <input
                  className="btn-search"
                  title="搜索"
                  type="submit"
                  value="搜 索"
                />
              </form>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div
    className="content"
  >
    <div
      style={
        Object {
          "background": "black",
          "height": "30px",
        }
      }
    >
      children
    </div>
  </div>
  <div
    className="footer"
  >
    <div
      id="footer"
    >
      <div
        className="area-inner"
      >
        <div
          className="about-block floatleft"
        >
          <div
            className="about-item left floatleft"
          >
            <div
              className="about-title"
            >
              About
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="http://www.bilibili.com"
              >
                BiliBili弹幕视频网
              </a>
              <a
                href="https://github.com/vitaminac/dilidili"
              >
                项目地址
              </a>
            </div>
          </div>
          <div
            className="about-item floatleft"
          >
            <div
              className="about-title"
            >
              Contact
            </div>
            <div
              className="aboutLinks"
            >
              <a
                href="https://vitaminac.github.io/"
              >
                Blog
              </a>
              <a
                href="https://github.com/vitaminac"
              >
                Github
              </a>
            </div>
          </div>
          <div
            className="about-item right floatleft"
          >
            <div
              className="about-title"
            >
              Copyright
            </div>
            <div
              className="aboutLinks"
            >
              <span>
                © 1997-2021
              </span>
            </div>
          </div>
        </div>
        <div
          className="clear"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots dilidili/VideoListItem Default 1`] = `
<div
  className="video-block-mask floatleft"
>
  <a
    href="/view/1"
    onClick={[Function]}
  >
    <div
      className="video-block-mask-preview"
    >
      <img
        alt="雷姆"
        src="https://i.imgur.com/GYD5IGu.jpg"
      />
    </div>
    <div
      className="video-block-mask-mask"
    />
    <div
      className="video-block-mask-info"
    >
      <div
        className="title"
      >
        雷姆
      </div>
      <div
        className="up"
      >
        up主：
        test
      </div>
      <div
        className="play"
      >
        播放：
        99
      </div>
    </div>
  </a>
</div>
`;
